--- a/comics.html
+++ b/comics.html
@@ -1,72 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><style>
-h1 {
-	font-size: 18px;
-	text-align: center;
-	font-family: "georgia";
-	text-transform: uppercase;
-	margin: 50px auto 10px auto; 
-}
-	
-h2 {
-	font-size: 18px;
-	text-align: left;
-	font-family: "georgia";
-}
-
-p {
-	font-size: 16px;
-	text-align: left;
-	font-family: "georgia";
-	border: 1px solid black;
-	width: 500px;
-	margin: 50px auto;
-}
-
-#intro{
-	padding: 50px;
-	margin: 50px 100px;
-}
-
-footer {
-	text-align: center;
-	margin: 150px auto 0px auto;
-	border: 1px dotted black;
-	padding: 0px 0px;
-	font-family: "georgia";
-	width: 700px;	
-}
-
-.img-circle {border-radius: 50%;}
-
-.img-circle:hover {border: 4px solid #FF3;}
-
-.header {
-	background:url(title.PNG) top center no-repeat; 
-	margin: 0 auto; 
-	padding-top: 150px;
-}
-
-a {color: black;}
-
-table {
-	font-size: 16px;
-	font-family: "georgia";
-	width: 600px;
-	margin: 50px auto 0 auto;
-}
-
-table.short-stories{
-	font-size: 16px;
-	font-family: "georgia";
-	width: 600px;
-	margin: 0 auto;
-}
-	
-td {padding: 5px;}
-
-</style><title>Comics - Arthropunk</title></head>
+<head>
+	<title>Comics - Arthropunk</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
 
 <!-- Begin Webcomic Content -->
 
@@ -80,7 +17,8 @@ td {padding: 5px;}
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
 <table> <td><a><img src="dailies.jpg.jpg" width="250" height="250" border="1px solid black"/></a></td>
-	<td><h2 id="dailies">"Dailies"</h2>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 / 14 / 15 / 16 / 17 /	18 / 19 / 20 / 21 / 22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 / 46 / 47 / 48 / 49 / 50 /</td></tr></table>
+	<td><h2 id="dailies">"Dailies"</h2>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i><br> 50 / 49 /	48 / 47 / 46 / 45 /	44 / 43 / 42 / 41 / 40 / 39 / 38 / 37 /	36 / 35 / 34 / 33 / 32 / 31 / 30 / 29 / 28 / 27 / 26 / 25 / 24 / 23 / 22 /	21 / 20 / 19 / 18 / 17 / 16 / 15 / 14 / 13 / 12 / 11 / 10 / 9 /	8 /	7 /	6 /	5 /	4 /	3 /	2 /	1
+</td></tr></table>
 
 <table> <td><a><img src="https://imgur.com/foROqsc.jpg" width="250" height="250" border="1px solid black"/></a></td>
 	<td><h2 id="all-my-friends-are-machines">"All My Friends Are Machines"</h2>After a chance encounter at the supermarket, Gregor tells a meandering tale to Richard detailing the challenges he faced prior to their friendship<br><br><i>~ page count:</i><br>/ 1 / 2 / 3 / 4 / 5 / 6 / 7 / 8 / 9 / 10 / 11 / 12 / 13 /	14 / 15 / 16 / 17 / 18 / 19 / 20 / 21 /	22 / 23 / 24 / 25 / 26 / 27 / 28 / 29 / 30 / 31 / 32 / 33 / 34 / 35 / 36 / 37 / 38 / 39 / 40 / 41 / 42 / 43 / 44 / 45 /	46 / 47 / 48 / 49 / 50 /<br></td></tr></table>
