--- a/comics.html
+++ b/comics.html
@@ -17,7 +17,7 @@
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
 <table> <td><a><img src="dailies.jpg.jpg" width="250" height="250" border="1px solid black"/></a></td>
-	<td><h2 id="dailies">"Dailies"</h2>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i><br> 50 / 49 /	48 / 47 / 46 / 45 /	44 / 43 / 42 / 41 / 40 / 39 / 38 / 37 /	36 / 35 / 34 / 33 / 32 / 31 / 30 / 29 / 28 / 27 / 26 / 25 / 24 / 23 / 22 /	21 / 20 / 19 / 18 / 17 / 16 / 15 / 14 / 13 / 12 / 11 / 10 / 9 /	8 /	7 /	6 /	5 /	4 /	3 /	2 /	1
+	<td><h2 id="dailies">"Dailies"</h2>Gags! Jokes! One-shot cartoons, some of which kind of tell a story<br><br><i>~page count:</i><br> 50 / 49 /	48 / 47 / 46 / 45 /	44 / 43 / 42 / 41 / 40 / 39 / 38 / 37 /	36 / 35 / 34 / 33 / 32 / 31 / 30 / 29 / 28 / 27 / 26 / 25 / 24 / 23 / 22 /	21 / 20 / 19 / 18 / 17 / 16 / 15 / 14 / 13 / <a href="seth.html">12 - Seth</a> / <a href="hey_seth_2.html>11 - Hey Seth, Part 2</a> / <a href="hey_seth_1.html">10 - Hey Seth, Part 1</a> / <a href="richard_and_gregor_go_shopping.html">9 - Richard and Gregor go shopping<a> /	<a href="police_1.html">8 - Police, Part 1</a> /	<a href="frosties.html">7 - Frosties</a> /	<a href="trilobites.html>6 - Trilobites</a> /	<a href="mastodon.html">5 - Mastodon</a> /	<a href="new_england.html">4 - New England</a> /	<a href="ferrets_2.html">3 - Ferrets, Part 2</a> /	<a href="ferrets_1.html">2 - Ferrets, Part 1</a> / <a href="arthropunk_origins.html"> 1 - Arthropunk Origins </a>
 </td></tr></table>
 
 <table> <td><a><img src="https://imgur.com/foROqsc.jpg" width="250" height="250" border="1px solid black"/></a></td>
