--- a/arthropunk_origins.html
+++ b/arthropunk_origins.html
@@ -8,15 +8,15 @@
 
 <!-- Begin Webcomic Content -->
 
-<body><div class="navigation"><center>
-	<a href="http://www.arthropunk.com/about"><img src="https://imgur.com/wZvUHlX.png" border=0></a>
-	<a href="http://www.arthropunk.com/comics"><img src="https://imgur.com/IPBhFlZ.png" border=0></a>
-	<a href="http://www.arthropunk.com/podcast"><img src="https://imgur.com/AjmqTnJ.png" border=0></a>
-	<a href="http://www.arthropunk.com/follow"><img src="https://imgur.com/zvlTbo3.png" border=0></a>
+<body><center><div class="navigation">
+	<a href="index.html"><img src="home.PNG" alt="home" border=0></a>
+	<a href="about.html"><img src="about.PNG" alt="about" border=0></a>
+	<a href="comics.html"><img src="comics.PNG" alt="comics" border=0></a>
+	<a href="podcast.html"><img src="podcast.PNG" alt="podcast" border=0></a>
+	<a href="follow.html"><img src="follow.PNG" alt="follow" border=0></a>
 	<!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
 	<a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
 </div>
-<center>
     <img src="t1.jpg" width="500" height="500"/><br />
     <a href="ferrets_1.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a></center>
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
