--- a/podcast.html
+++ b/podcast.html
@@ -1,38 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><style>
-p {
-	font-size: 16px;
-	text-align: left;
-	font-family: "georgia";
-	border: 0px solid black;
-	width: 500px;
-	margin: 50px auto;
-}
-#intro{
-	padding: 50px;
-	margin: 50px 100px;
-}
-footer {
-	text-align: center;
-	margin: 150px auto 0px auto;
-	border: 1px dotted black;
-	padding: 0px 0px;
-	font-family: "georgia";
-	width: 700px;	
-}
-.img-circle {border-radius: 50%;}
-.img-circle:hover {border: 4px solid #FF3;}
-.header {
-	background:url(title.PNG) top center no-repeat; 
-	margin: 0 auto; 
-	padding-top: 150px;
-}
-a {color: black;}
-	
-</style>
+<head>
 	<title> Podcast - Arthropunk</title>
-	</head>
+	<link href="style.css" type="text/css" rel="stylesheet">
+</head>
 
 <!-- Begin Webcomic Content -->
 
@@ -50,9 +21,9 @@ a {color: black;}
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 		<!-- <a href="/support.html"><img src="" border=0></a> -->
-	</center></div>
-<p>Coming soon...</p>
-	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
-
+	</div>
+<h1>Coming soon...</h1>
+	<p><img src="https://i.imgur.com/7GfvAav.png" width="500" height="500"/></p></center>
+	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a> "Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
 </html>
