--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 		<!-- <a href="/support.html"><img src="" border=0></a> -->
-	</center></div>
-<p><img src="https://i.imgur.com/7GfvAav.png" width="500" height="500"/></p>
+	</div>
+	<div class="nav"><b><span style="font-size: 18px;">N</span>EWEST <span style="font-size: 18px;">C</span>OMIC:</b><br/><br/><br/><a href="">Previous Comic</a><br /><br /><a href="">First Comic</a></div>
+	<p><img src="mostrecent.jpg" width="525" height="500"/></p>
+	<div class="blog"><h3>Hey all welcome to Arthropunk</h3>
+		<p class="blog">A few words about the site...</p></div>
+</center>
 	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 
 </body>
