--- a/about.html
+++ b/about.html
@@ -1,41 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head><style>
-p {
-	font-size: 16px;
-	text-align: left;
-	font-family: "georgia";
-	border: 0px solid black;
-	width: 500px;
-	margin: 50px auto;
-}
-
-#intro{
-	padding: 50px;
-	margin: 50px 100px;
-}
-
-footer {
-	text-align: center;
-	margin: 150px auto 0px auto;
-	border: 1px dotted black;
-	padding: 0px 0px;
-	font-family: "georgia";
-	width: 700px;	
-}
-
-.img-circle {border-radius: 50%;}
-
-.img-circle:hover {border: 4px solid #FF3;}
-
-.header {
-	background:url(title.PNG) top center no-repeat; 
-	margin: 0 auto; 
-	padding-top: 150px;
-}
-
-a {color: black;}
-</style>
+<head>
+	<link href="style.css" rel="stylesheet" type="text/css">
 	<title>About - Arthropunk</title></head>
 
 <!-- Begin Webcomic Content -->
@@ -45,7 +11,7 @@ a {color: black;}
 		<a href="comics.html#dailies"><img class="img-circle" src="dailies.jpg.jpg" alt=""Dailies"" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#all-my-friends-are-machines"><img class="img-circle" src="amfam.jpg.jpg" alt="All My Friends Are Machines" border="4px solid black" width="200" height="200" /></a>
 		<a href="comics.html#short-stories"><img class="img-circle" src="short-stories.jpg.jpg"alt="Short Stories" border="4px solid black" width="200" height="200" /></a>
-	</div></center>
+	</div>
 	<div class="navigation"><center>
 		<a href="index.html"><img src="home.PNG" border=0></a>
 		<a href="about.html"><img src="about.PNG" border=0></a>
@@ -54,7 +20,7 @@ a {color: black;}
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a>
 		<a href="/support.html"><img src="" border=0></a> -->
-	</center></div>
+	</div></center>
 
 <p>
 <b>About the author</b><br /><br /> 
