--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 	<title> Arthropunk by Vernon Meidlinger-Chin</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -23,13 +21,15 @@
 		<a href="follow.html"><img src="follow.PNG" border=0></a>
 		<!-- <a href="/contact.html"><img src="https://imgur.com/9DEaj9p.png" border=0></a> -->
 		<!-- <a href="/support.html"><img src="" border=0></a> -->
-	</div>
-	<div class="nav"><b><span style="font-size: 18px;">N</span>EWEST <span style="font-size: 18px;">C</span>OMIC:</b><br/><br/><br/><a href="">Previous Comic</a><br /><br /><a href="">First Comic</a></div>
-	<p><img src="mostrecent.jpg" width="525" height="500"/></p>
-	<div class="blog"><h3>Hey all welcome to Arthropunk</h3>
-		<p class="blog">A few words about the site...</p></div>
+	</div><table class="homepage"><tr>
+	<td style="text-align: right;"><h1></h1><img src="newest.png" alt="NEWEST COMIC:" width="230px" height="50px"/><br/><br/><br/><a href=""><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><a href=""><img src="first.png" alt="first" width="70px" height="36px"/></a></td>
+	<td><img src="mostrecent.jpg" width="525" height="500"/></td>
+</tr></table>
+	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
+	<p class="nomargin">
+<i>~November 2017~</i><br/><br/>Finally, the <i>Arthropunk</i> website is up and running! Thanks to everybody who helped me out in putting together this website. You know who you are and I owe you cake.<br/><br/><i>Arthropunk</i> is a comic by Vernon Meidlinger-Chin. If this is your first time here, take a look at the "<a href="comics.html#dailies">Dailies</a>" to get a sense of the humor and style of the comic. If you're already on board, try digging into the ongoing graphic novel <i><a href="comics.html#all-my-friends-are-machines">All My Friends Are Machines</a></i>.<br/><br/>Also available for your pleasure are other, non-<i>Arthropunk</i> projects: a handful of comic <a href=comics.html#short-stories">short stories</a> as well as the <a href="podcast.html">Pencil Arms Podcast</a>. And, if it's something you're into, follow <i>Arthropunk</i> on <a href="follow.html">social media</a>.<br/><br/><br/>Enjoy!<br/><br/>Vernon<br/><br/></p></div>
 </center>
-	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>		"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
+	<footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 
 </body>
 </html>
