--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title> Arthropunk by Vernon Meidlinger-Chin</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
+	<meta http-equiv="description" content="Arthropunk, Comics by, for, and about Rock and Roll Insects">
+	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
 </head>
 
 <!-- Begin Webcomic Content -->
