--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Arthropunk by Vernon Meidlinger-Chin</title>
+	<title> Arthropunk! Webcomic by Vernon Meidlinger-Chin</title>
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
-	<meta http-equiv="description" content="Arthropunk, Comics by, for, and about Rock and Roll Insects">
+	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
 </head>
 
