--- a/about.html
+++ b/about.html
@@ -3,6 +3,9 @@
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css">
 	<title>About - Arthropunk</title></head>
+	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
+	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
+	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
 
 <!-- Begin Webcomic Content -->
 
