--- a/DARE.html
+++ b/DARE.html
@@ -3,6 +3,7 @@
  <head>
   <title>D.A.R.E.</title>
   <link href="style.css" type="text/css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico">
  </head>
 
 <!-- Begin Webcomic Content -->
@@ -25,4 +26,4 @@
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
-</html>
+</html>
