--- a/Tetzlaff1.html
+++ b/Tetzlaff1.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><link href="style.css" rel="stylesheet" type="text/css"><title>Page 1</title></head>
+<head><link href="style.css" rel="stylesheet" type="text/css"><link rel="shortcut icon" href="favicon.ico"><title>Page 1</title></head>
 
 <!-- Begin Webcomic Content -->
 
