--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link href="style.css" rel="stylesheet" type="text/css"></head>
+<link href="style.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="favicon.ico">
 <title>About - Arthropunk</title></head>
 <meta http-equiv="author" content="Vernon Meidlinger-Chin">
 <meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
@@ -14,7 +15,7 @@
   gtag('js', new Date());
 
   gtag('config', 'UA-109651657-1');
-</script>
+</script></head>
 
 <!-- Begin Webcomic Content -->
 
