--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title> Arthropunk! Webcomic by Vernon Meidlinger-Chin</title>
-	<link href="style.css" rel="stylesheet" type="text/css">
+	<link href="style.css" rel="stylesheet" type="text/css"><link rel="shortcut icon" href="favicon.ico">
 	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
 	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
