--- a/follow.html
+++ b/follow.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><link href="style.css" rel="stylesheet" type="text/css"><title>Follow - Arthropunk</title></head>	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
+<head><link rel="shortcut icon" href="favicon.ico"><link href="style.css" rel="stylesheet" type="text/css"><title>Follow - Arthropunk</title></head>	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
 	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
 
