--- a/follow.html
+++ b/follow.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head><link rel="shortcut icon" href="favicon.ico"><link href="style.css" rel="stylesheet" type="text/css"><title>Follow - Arthropunk</title></head>	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
+<head><link href="style.css" rel="stylesheet" type="text/css">
+	<title>Follow - Arthropunk</title></head>	
+	<link rel="shortcut icon" href="favicon.ico">
+	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
 	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
-
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-109651657-1');
+</script>
 <!-- Begin Webcomic Content -->
 
 <body>
