--- a/trilobites.html
+++ b/trilobites.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		</title>
+	<title>Trilobites</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
-
+	<link rel="shortcut icon" href="favicon.ico">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-109651657-1');
+</script>
 </head>
 
 <!-- Begin Webcomic Content -->
