--- a/follow.html
+++ b/follow.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head><link href="style.css" rel="stylesheet" type="text/css">
-	<title>Follow - Arthropunk</title></head>	
-	<link rel="shortcut icon" href="favicon.ico">
+	<title>Follow - Arthropunk</title>
 	<meta http-equiv="author" content="Vernon Meidlinger-Chin">
 	<meta http-equiv="description" content="Online graphic novel by, for, and about Rock and Roll Insects">
 	<meta http-equiv="keywords" content="comic, webcomic, graphic novel, punk, insect, music, arthropod, entomology, feels, funny">
+	<link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
+
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
+
   gtag('config', 'UA-109651657-1');
 </script>
+	</head>
+	
 <!-- Begin Webcomic Content -->
 
 <body>
