--- a/gregor_applies_for_a_job_1.html
+++ b/gregor_applies_for_a_job_1.html
@@ -3,6 +3,17 @@
  <head>
   <title>Gregor applies for a job, Part 1</title>
   <link href="style.css" type="text/css" rel="stylesheet">
+  <link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109651657-1');
+</script>
  </head>
 
 <!-- Begin Webcomic Content -->
@@ -25,4 +36,4 @@
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
-</html>
+</html>
