--- a/never1.html
+++ b/never1.html
@@ -2,6 +2,17 @@
 <html>
 <head>
 	<link href="style.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109651657-1');
+</script>
 	<title>Page 1</title></head>
 
 <!-- Begin Webcomic Content -->
