--- a/never3.html
+++ b/never3.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head><link href="style.css" rel="stylesheet" type="text/css"><title>Page 2</title></head>
+<head>
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<title>Page 2</title>
+	<link rel="shortcut icon" href="arthroicon.ico" type="image/x-icon">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-109651657-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-109651657-1');
+</script>
+	</head>
 
 <!-- Begin Webcomic Content -->
 
