--- a/all-my-friends-are-machines37.html
+++ b/all-my-friends-are-machines37.html
@@ -30,7 +30,7 @@
    </div>
     <br /><img src="a37.jpg" width="600" height="800"/><br />
     <a href="all-my-friends-are-machines36.html"><img src="prev.jpg" alt="previous" width="180px" height="48px"/></a>
-    <!-- <a href="all-my-friends-are-machines38.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a> -->
+    <a href="all-my-friends-are-machines38.html"><img src="next.jpg" alt="next" width="135px" height="48px"/></a>
  </center>
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
