--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 		<!-- <a href="/support.html"><img src="" border=0></a> -->
 	</div><table class="homepage"><tr>
 	<td style="text-align: right;"><h1></h1><a href="all-my-friends-are-machines39.html"><img src="newest.PNG" alt="NEWEST COMIC:" width="230px" height="50px"/></a><br/><br/><br/><a href="all-my-friends-are-machines38.html"><img src="prev.jpg" alt="previous" width="120px" height="32px"/></a><br/><br/><a href="all-my-friends-are-machines1.html"><img src="first.PNG" alt="first" width="70px" height="36px"/></a></td>
-	<td><img src="a39.jpg" width="600" height="800"/></td>
+	<td><img src="a39.JPG" width="600" height="800"/></td>
 </tr></table>
 	<div class="blog"><h3><span style="font-size: 20px;">W</span>ELCOME TO <span style="font-size: 20px;">A</span>RTHROPUNK</h3>
 	<p class="nomargin">
