--- a/two-anatomies-of-loneliness.html
+++ b/two-anatomies-of-loneliness.html
@@ -28,8 +28,8 @@
      <!-- <a href="http://www.arthropunk.com/contact"><img src="https://imgur.com/9DEaj9p.png" border=0></a> 
      <a href="http://www.arthropunk.com/support"><img src="" border=0></a> -->
    </div>
-    <br /><table><tr><td><img src="Two-Anatomies1.tiff" width="600" height="800"/></td>
-	<td><img src="Two-Anatomies2.tiff" width="600" height="800"/></td></tr></table><br />
+    <br /><table><tr><td><img src="Two-Anatomies1.png" width="600" height="800"/></td>
+	<td><img src="Two-Anatomies2.png" width="600" height="800"/></td></tr></table><br />
  <footer text-align="center"><a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a>"Arthropunk" and all related properties by Vernon Meidlinger-Chin are licensed under a <a rel="license" 
 href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a></footer>
 </body>
